--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">Quiz App</string>
+    <string name="t1">Computer</string>
+    <string name="t2">General Knowledge</string>
+    <string name="t3">Sport</string>
+    <string name="t4">Science</string>
+    <string name="t5">Politics</string>
+    <string name="t6">Geography</string>
+    <string name="t7">Game Of Thrones</string>
+    <string name="t8">Harry Potter</string>
 </resources>
